Implemented searching by run key tag